--- a/web/src/main/resources/templates/accounts/index.html
+++ b/web/src/main/resources/templates/accounts/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 
-<link rel="stylesheet" href="../static/assets/css/bootstrap.min.css" />
-<link rel="stylesheet" href="../static/assets/css/tether.min.css" />
-<link rel="stylesheet" href="../static/assets/css/iichi.co.css" />
-<script src="../static/assets/js/jquery-2.2.0.min.js"></script>
-<script src="../static/assets/js/tether.min.js"></script>
-<script src="../static/assets/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="../../static/assets/css/bootstrap.min.css" />
+<link rel="stylesheet" href="../../static/assets/css/tether.min.css" />
+<link rel="stylesheet" href="../../static/assets/css/iichi.co.css" />
+<script src="../../static/assets/js/jquery-2.2.0.min.js"></script>
+<script src="../../static/assets/js/tether.min.js"></script>
+<script src="../../static/assets/js/bootstrap.min.js"></script>
 
 <nav class="navbar navbar-static-top navbar-dark" style="background-color:red">
     <div class="container">
