--- a/web/src/main/resources/templates/login.html
+++ b/web/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
     </div>
 </nav>
 
-<div layout:fragment="layout-content">
+<div class="content" layout:fragment="layout-content">
     <div class="jumbotron login">
 
         <div class="container">
