--- a/web/src/main/resources/templates/layout.html
+++ b/web/src/main/resources/templates/layout.html
@@ -19,9 +19,19 @@
     <script src="../static/assets/js/jquery-2.2.0.min.js" th:src="@{~/assets/js/jquery-2.2.0.min.js}"></script>
     <script src="../static/assets/js/tether.min.js" th:src="@{~/assets/js/tether.min.js}"></script>
     <script src="../static/assets/js/bootstrap.min.js" th:src="@{~/assets/js/bootstrap.min.js}"></script>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-73743826-1', 'auto');
+  ga('send', 'pageview');
+
+    </script>
 </head>
 <body>
-<nav class="navbar navbar-static-top navbar-dark" th:fragment="header">
+<nav class="navbar navbar-top navbar-full bg-inverse navbar-light">
     <div class="container">
         <a class="navbar-brand" href="/" th:href="@{~/}">
             <img class="img-fluid logo" src="../static/assets/img/logo.png" th:src="@{~/assets/img/logo.png}"/>
@@ -29,24 +39,17 @@
 
         <ul class="nav nav-pills pull-xs-right">
             <li class="nav-item">
-                <a class="nav-link" href="/login"
+                <a class="btn btn-secondary nav-link" style="font-weight:bold" href="/login"
                    th:href="${user} ? @{~/accounts} : @{~/login}"
-                   th:text="${user} ? ${user.nickname} : 'LOGIN'">LOGIN</a>
+                   th:text="${user} ? ${user.nicknameShort} : 'LOGIN'">LOGIN</a>
             </li>
         </ul>
     </div>
 </nav>
 
-<div layout:fragment="layout-content">
+<div class="content" layout:fragment="layout-content">
 ここにコンテンツが入ります
 </div>
-
-<nav class="navbar navbar-default navbar-bottom" th:fragment="footer">
-    <div class="container">
-        <hr />
-        <p>&copy; 2015 iichi.co</p>
-    </div>
-</nav>
 
 </body>
 </html>
