--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <div class="container">
-            <h1 class="display-3">Hello, world!</h1>
+            <h1 class="display-3">iichi.co</h1>
         </div>
     </div>
 
@@ -35,18 +35,13 @@
         <div class="row">
             <div class="col-md-4">
                 <h2>Boards</h2>
-                <p>xxxxxxxxxxxxxxxxxxxxxxxxxx</p>
+                <p>掲示板みたいなもの。</p>
                 <p><a class="btn btn-primary btn-lg" href="/boards" role="button">Boards &raquo;</a></p>
             </div>
             <div class="col-md-4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-            </div>
-            <div class="col-md-4">
-                <h2>Heading</h2>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                <h2>IMP</h2>
+                <p>画像でショッピング。</p>
+                <p><a class="btn btn-primary btn-lg" href="/imp" role="button">IMP &raquo;</a></p>
             </div>
         </div>
     </div> <!-- /container -->
